fix: hide like button until img loaded to avoid layout shift

--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -96,3 +96,7 @@ img.toggleButtonImg {
     padding: 2px;
     border-radius: 2px;
 }
+
+.hiddenButton {
+    display: none;
+}
